--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,7 +1,7 @@
 @import 'config.scss';
 
 .signin-component, .signup-component, .edit-user-component,
-.edit-password-component, .forgot-password-component {
+.edit-password-component, .forgot-password-component, .confirmation-component {
   background: $GRAY_BG_COMPONENT;
   border: thin $LIGHTGRAY_BORDER_COMPONENT dashed;
   width: 350px;
