Create order model with the proper relationship with user model. Create method to initialize every order status in pending. Build is_admin? method to validate if current_user is an admin. Use Enum method from ActiveRecord to map status symbols to numbers on database. Orders views and controller created from the scaffold command.

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -1,7 +1,8 @@
 @import 'config.scss';
 
 .signin-component, .signup-component, .edit-user-component,
-.edit-password-component, .forgot-password-component, .confirmation-component {
+.edit-password-component, .forgot-password-component, .confirmation-component,
+.order-form-component, .user-form-component {
   background: $GRAY_BG_COMPONENT;
   border: thin $LIGHTGRAY_BORDER_COMPONENT dashed;
   width: 350px;
