Refactor user's orders to show on the index page. Build the order detail and be able to edit, update, create and delete. Manage change the name of the partial form of orders depending on the action performing (create or update). Create a migration to change the column :phone from the table orders to trigger the range from limit => 4 to limit => 8.

--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -1,6 +1,8 @@
-<h1>Editing Order</h1>
+<div class="order-form-component">
+  <h2>Editing Order</h2>
 
-<%= render 'form', order: @order %>
+  <%= render 'form', order: @order %>
 
-<%= link_to 'Show', @order %> |
-<%= link_to 'Back', orders_path %>
+  <%= link_to 'Show', @order %> |
+  <%= link_to 'Back', user_orders_path %>
+</div>
