--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -32,9 +32,9 @@
         <td><%= order.bill_zipcode %></td>
         <td><%= order.phone %></td>
         <td><%= order.user %></td>
-        <td><%= link_to 'Show', order %></td>
-        <td><%= link_to 'Edit', edit_order_path(order) %></td>
-        <td><%= link_to 'Destroy', order, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', user_order_path(current_user,order) %></td>
+        <td><%= link_to 'Edit', edit_user_order_path(current_user,order) %></td>
+        <td><%= link_to 'Destroy', user_order_path(current_user,order), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
