--- a/app/views/orders/_form.html.erb
+++ b/app/views/orders/_form.html.erb
@@ -1,8 +1,8 @@
-<div class="order-form-component">
-  <%= form_for(order) do |f| %>
-    <% if order.errors.any? %>
+
+  <%= form_for [current_user,@order] do |f| %>
+    <% if @order.errors.any? %>
       <div id="error_explanation">
-        <h2><%= pluralize(order.errors.count, "error") %> prohibited this order from being saved:</h2>
+        <h3><%= pluralize(@order.errors.count, "error") %> prohibited this order from being saved:</h3>
 
         <ul>
         <% order.errors.full_messages.each do |message| %>
@@ -56,14 +56,8 @@
       <%= f.label :phone, class:"control-label"  %>
       <%= f.number_field :phone, class:"form-control" %>
     </div>
-
-    <div class="form-group">
-      <%= f.label :user_id, class:"control-label"  %>
-      <%= f.text_field :user_id, class:"form-control" %>
-    </div>
-
+    
     <div class="actions">
-      <%= f.submit %>
+      <%= f.submit (f.object.new_record? ? "Create" : "Update" ), class:"btn btn-warning" %>
     </div>
   <% end %>
-</div>
