--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,5 +1,7 @@
-<h1>New Order</h1>
+<div class="order-form-component">
+  <h2>New Order</h2>
 
-<%= render 'form', order: @order %>
+  <%= render 'form', order: @order %>
 
-<%= link_to 'Back', orders_path %>
+  <%= link_to 'Back', user_orders_path %>
+</div>
