Fix little bugs regarding url pathways andsome fields to appear on the order show page.

--- a/app/views/orders/edit.html.erb
+++ b/app/views/orders/edit.html.erb
@@ -3,6 +3,6 @@
 
   <%= render 'form', order: @order %>
 
-  <%= link_to 'Show', @order %> |
+  <%= link_to 'Show', user_order_path(current_user,@order) %> |
   <%= link_to 'Back', user_orders_path %>
 </div>
