Create a product model with relationships between OrderItem and Order. Create a join model order_item containing details about the actual order. Add filter for products that are active. Build all views for products focusing on CRUD functionalities. Run migrations to change the schema of DB. Add routes for products.

--- a/app/assets/stylesheets/forms.scss
+++ b/app/assets/stylesheets/forms.scss
@@ -2,7 +2,7 @@
 
 .signin-component, .signup-component, .edit-user-component,
 .edit-password-component, .forgot-password-component, .confirmation-component,
-.order-form-component, .user-form-component {
+.order-form-component, .user-form-component, .edit-product-component, .new-product-component {
   background: $GRAY_BG_COMPONENT;
   border: thin $LIGHTGRAY_BORDER_COMPONENT dashed;
   width: 350px;
