--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,8 +22,10 @@
           <td><%= product.inventory %></td>
           <td><%= product.active %></td>
           <td><%= link_to 'Show', product %></td>
-          <td><%= link_to 'Edit', edit_product_path(product) %></td>
-          <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% if is_admin? %>
+            <td><%= link_to 'Edit', edit_product_path(product) %></td>
+            <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          <% end %>
         </tr>
       <% end %>
     </tbody>
