--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -35,6 +35,8 @@
         <td><%= order.bill_state %></td>
         <td><%= order.bill_zipcode %></td>
         <td><%= order.status %></td>
+        <td><%= order.status %></td>
+        
         <td><%= link_to 'Show', user_order_path(current_user,order) %></td>
         <td><%= link_to 'Edit', edit_user_order_path(current_user,order) %></td>
         <td><%= link_to 'Destroy', user_order_path(current_user,order), method: :delete, data: { confirm: 'Are you sure?' } %></td>
