--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -32,6 +32,7 @@
   </table>
 
   <br>
-
-  <%= link_to 'New Product', new_product_path %>
+  <% if is_admin? %>
+    <%= link_to 'New Product', new_product_path %>
+  <% end %>
 </div>
