Create a cart controller with actions show, add_to_cart, and remove_from_cart. The order items are store in the session hash as session[:cart] where the basic information of an order item can be access and persist between different requests. Show action maps through the session[:cart] order items and merges a cart_list_id to be able to identify the index in which the information of an order item is on the array of the session[:cart] hash. Add_to_cart is in charge with an aid from a helper method 'add_order_item_to_cart' to add an order item to the cart session[:cart]. Remove_from_cart uses the cart_list_id created on the show method to identify which item must be remove from the cart session list. Create helper methods ensure_cart_exists which validates the existance of a variable session[:cart] in the session and clear_session_cart which sets session value of cart to nil. Build all the show template view of the cart with two partials shopping_cart and cart_row to be able to render the order items. Orders controller manage to calculate the total of the entire order and make the proper association and persistance to DB between the order_items and the actual order itself. After everything is safe then clears the session cart list. Create migration to add new column of TOTAL to the order model.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -19,10 +19,17 @@
   <strong>Active:</strong>
   <%= @product.active %>
 </p>
-
-<div>
-  <%= link_to 'Add Cart', root_path,class:"btn btn-warning"%>
-</div>
+<%= form_tag add_to_cart_path, method:"post" do %>
+  <div class="col-xs-4 input-group qty-control">
+    <%= hidden_field_tag "cart[product_id]", @product.id %>
+    <%= number_field_tag "cart[quantity]",nil, class:"form-control input-lg", style:"text-align:center;",  min:0, max:99 %>
+  	<span class="btn input-group-addon">Units.</span>
+  </div>
+  <br>
+  <div>
+    <%= submit_tag 'Add Cart', class:"btn btn-warning"%>
+  </div>
+<% end %>
 
 <%= link_to 'Edit', edit_product_path(@product) %> |
 <%= link_to 'Back', products_path %>
