--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -23,9 +23,10 @@
           <td><%= product.active %></td>
           <td><%= link_to 'Show', product %></td>
           <% if is_admin? %>
-            <td><%= link_to 'Edit', edit_product_path(product) %></td>
-            <td><%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <td> | <%= link_to 'Edit', edit_product_path(product) %></td>
+            <td> | <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           <% end %>
+          
         </tr>
       <% end %>
     </tbody>
@@ -35,4 +36,3 @@
   <% if is_admin? %>
     <%= link_to 'New Product', new_product_path %>
   <% end %>
-</div>
