--- a/app/views/layouts/_navigation_bar.html.erb
+++ b/app/views/layouts/_navigation_bar.html.erb
@@ -3,10 +3,15 @@
     <p>NAVIGATION BAR GOES HERE</p>
     <% if user_signed_in? %>
       Logged in as <strong> <%= current_user.email %> </strong>
+      <%= link_to 'Home', home_path%> |
       <%= link_to 'Edit Profile', edit_user_registration_path %> |
-      <%= link_to 'Sign out', destroy_user_session_path, method: :delete %> |
       <%= link_to 'My orders', user_orders_path(current_user) %> |
-      <%= link_to 'My Cart', cart_path %>
+      <%= link_to 'My Cart', cart_path %> |
+      <%= link_to 'Sign out', destroy_user_session_path, method: :delete %> |
+      <% if is_admin?  %>
+        <%= link_to 'All Users', users_path  %> |
+        <%= link_to 'All Categories', categories_path %> |
+      <% end %>
     <% else %>
       <%= link_to 'Sign up', new_user_registration_path %> |
       <%= link_to 'Sign in', new_user_session_path %>
