Add a method on products_controller set_category where actually the category and the product gets created and associated in join model category_product. Add a method set_category_names where I get all categories ordered by names. Build collection dropdown of categories on the categories form. Refactor and add the dropdown categories to the product's partial _form.html.erb. Refactor the current category and the parential path on which a product belongs to be shown on the details page of the product.

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -15,6 +15,20 @@
   <%= @product.inventory %>
 </p>
 
+<% if @product.categories.size != 0 %>
+  <p>
+    <strong>Under Category:</strong>
+    <p style="text-indent: 50px;"> <%= @product.categories.first.name %></p>
+  </p>
+<% end %>
+
+<p>
+  <strong>Path</strong>
+  <% @categories.map do |category| %>
+    <p style="text-indent: 50px;"> <%= category.long_name %>  </p>
+  <% end %>
+</p>
+
 <p>
   <strong>Active:</strong>
   <%= @product.active %>
@@ -31,5 +45,7 @@
   </div>
 <% end %>
 
-<%= link_to 'Edit', edit_product_path(@product) %> |
+<% if is_admin? %>
+  <%= link_to 'Edit', edit_product_path(@product) %> |
+<% end %>
 <%= link_to 'Back', products_path %>
