--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -19,7 +19,10 @@
   <div class="row">
     <div class="form-group col-xs-4">
       <%= f.label :parent_id, "Parent Category" %><br>
-      <%= collection_select(:category,:parent_id,@categories,:id,:long_name, {:include_blank => '- Select Category-', :selected => true}) %> 
+      <%= collection_select(:category, :parent_id, @categories, :id, :long_name,
+                  { :include_blank => '- Select Category-', :selected => true },
+                  class:"form-control")
+      %>
    </div>
  </div>
 
