--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -31,8 +31,20 @@
     <%= f.label :active, class:"control-label" %>
     <%= f.check_box :active, class:"form-control" %>
   </div>
+  <div class="form_group">
+    <%= f.label "Under Category: ", class:"control-label" %>
+    <span><%= @product.categories.first.name.upcase unless @product.categories.first.nil?%> </span>
+  </div><br>
+
+  <div class="form-group">
+    <%= f.label :category_id, "Change category?", class:"control-label"%><br>
+    <%= collection_select(:category,:category_id,@categories,:id,:long_name,
+                 {:include_blank => '- Select Category-', :selected => true},
+                  class:"form-control")
+    %><br>
+ </div>
 
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit (f.object.new_record? ? "Create" : "Update"), class:"btn btn-success" %>
   </div>
 <% end %>
