Change is_admin? method on application controller to be able to redirect and show the flash message. Add admin validaiton :is_admin? for all products actions except: [:index, :show]. Manage the refactor and update the role of a user and at the same time validate that only admins can access this feature of the application. Add dropdown list of the roles on the user's _form partial. Finally, add sunspot_rails and sunspot_solr gems for next feature of a search functionality

--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -19,10 +19,7 @@
   <div class="row">
     <div class="form-group col-xs-4">
       <%= f.label :parent_id, "Parent Category" %><br>
-      <%= collection_select(:category, :parent_id, @categories, :id, :long_name,
-                  { :include_blank => '- Select Category-', :selected => true },
-                  class:"form-control")
-      %>
+      <%= collection_select(:category,:parent_id,@categories,:id,:long_name, {:include_blank => '- Select Category-', :selected => true}) %>
    </div>
  </div>
 
