--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -45,7 +45,7 @@
   </div>
 <% end %>
 
-<% if is_admin? %>
+<% if current_user.admin? %>
   <%= link_to 'Edit', edit_product_path(@product) %> |
 <% end %>
 <%= link_to 'Back', products_path %>
