--- a/app/views/layouts/_navigation_bar.html.erb
+++ b/app/views/layouts/_navigation_bar.html.erb
@@ -8,7 +8,7 @@
       <%= link_to 'My orders', user_orders_path(current_user) %> |
       <%= link_to 'My Cart', cart_path %> |
       <%= link_to 'Sign out', destroy_user_session_path, method: :delete %> |
-      <% if is_admin?  %>
+      <% if current_user.admin?  %>
         <%= link_to 'All Users', users_path  %> |
         <%= link_to 'All Categories', categories_path %> |
       <% end %>
