--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -22,17 +22,17 @@
           <td><%= product.inventory %></td>
           <td><%= product.active %></td>
           <td><%= link_to 'Show', product %></td>
-          <% if is_admin? %>
+          <% if !current_user.nil? and current_user.admin? %>
             <td> | <%= link_to 'Edit', edit_product_path(product) %></td>
             <td> | <%= link_to 'Destroy', product, method: :delete, data: { confirm: 'Are you sure?' } %></td>
           <% end %>
-          
+
         </tr>
       <% end %>
     </tbody>
   </table>
 
   <br>
-  <% if is_admin? %>
+  <% if !current_user.nil? and current_user.admin? %>
     <%= link_to 'New Product', new_product_path %>
   <% end %>
