Add Several rspec test for models and controller actions product, order and order items. Deleted autogenerated test from the rails framework. Additionally build test to ensure basic functionality of the core models function.

--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -39,7 +39,7 @@
 
         <td><%= link_to 'Show', user_order_path(current_user,order) %></td>
         <td><%= link_to 'Edit', edit_user_order_path(current_user,order) %></td>
-        <td><%= link_to 'Destroy', user_order_path(current_user,order), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Cancel', user_order_path(current_user,order), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
