--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
     <header>
       <%= render 'layouts/navigation_bar'  %>
     </header>
-    <main>
+    <main class="container" style="margin-top:5.5em; margin-bottom:1.5em;">
       <%= render 'layouts/messages' %>
       <%= yield %>
     </main>
