--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,10 +2,10 @@
 
 <h1>Orders</h1>
 
-<table>
+<table class="table table-hover">
   <thead>
     <tr>
-      <th>Id</th>
+      <th>#</th>
       <th>Email</th>
       <th>Phone</th>
       <th>Firstname</th>
@@ -16,15 +16,13 @@
       <th>State</th>
       <th>Zipcode</th>
       <th>Status</th>
-
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @orders.each do |order| %>
       <tr>
-        <td><%= order.id %></td>
+        <td scope="row"><%= order.id %></td>
         <td><%= order.email %></td>
         <td><%= order.phone %></td>
         <td><%= order.bill_firstname %></td>
@@ -34,12 +32,12 @@
         <td><%= order.bill_city %></td>
         <td><%= order.bill_state %></td>
         <td><%= order.bill_zipcode %></td>
-        <td><%= order.status %></td>
+        <td><%= label_tag order.status, nil, style:"color:orange;" %></td>
         <td>-</td>
 
-        <td><%= link_to 'Show', user_order_path(current_user,order) %></td>
-        <td><%= link_to 'Edit', edit_user_order_path(current_user,order) %></td>
-        <td><%= link_to 'Cancel', user_order_path(current_user,order), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Details', user_order_path(current_user,order) %></td>
+        <td><%= link_to 'Modify', edit_user_order_path(current_user,order) %></td>
+        <td ><%= link_to 'Cancel', user_order_path(current_user,order), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
