--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -29,6 +29,11 @@
   <% end %>
 </p>
 
+<div class="description">
+  <strong>Description</strong>
+  <p> <%= @product.description %></p>
+</div>
+
 <p>
   <strong>Active:</strong>
   <%= @product.active %>
