Comment all SOLR functionality because in production must pay to be able to use the search engine. Fix categories creation and association with products; Now a product can be under several categories. Add relationship dependent: :delete_all so when a category is vanish all RELATIONSHIPS that it has with products are also DELETED. Work on styling the presentation of data of the product.

--- a/app/views/products/_form.html.erb
+++ b/app/views/products/_form.html.erb
@@ -36,12 +36,12 @@
     <%= f.check_box :active %>
   </div>
   <div class="form_group">
-    <%= f.label "Under Category: ", class:"control-label" %>
-    <span><%= @product.categories.first.name.upcase unless @product.categories.first.nil?%> </span>
+    <%= f.label "Under Categories: ", class:"control-label" %>
+    <span><%= @product.categories.map{|c| c.name.upcase}.join(' - ') unless @product.categories.first.nil?%> </span>
   </div><br>
 
   <div class="form-group">
-    <%= f.label :category_id, "Change category?", class:"control-label"%><br>
+    <%= f.label :category_id, "Add Category:", class:"control-label"%><br>
     <%= collection_select(:category,:category_id,@categories,:id,:long_name,
                  {:include_blank => '- Select Category-', :selected => true},
                   class:"form-control")
