Set scope functionality to be able to have a lambda and apply a block with an argument, with the purpose of calling this filter depending on true for actives and false for inactives. Build inactives view to be able to list all inactive products.

--- a/app/views/products/inactives.html.erb
+++ b/app/views/products/inactives.html.erb
@@ -1,5 +1,5 @@
-<div class="home-component">
-  <h1>Products</h1>
+<div class="inactive-product-component">
+  <h1>Inactive Products</h1>
 
 
   <%= "<div>Total Pages: #{@total_pages} </div>".html_safe unless @total_pages.nil?%>
@@ -36,5 +36,4 @@
   <br>
   <% if current_user.present? and current_user.admin? %>
     <%= link_to 'New Product', new_product_path %>
-    <%= link_to 'List Inactive Products', products_inactives_path %>
   <% end %>
